--- a/todo.css
+++ b/todo.css
@@ -9,6 +9,9 @@ h1{
     padding:10px 10px;
 
 }
+form{
+    color: white;
+}
 ul{
     color :black;
     font-family: Arial, Helvetica, sans-serif;
