--- a/todo.css
+++ b/todo.css
@@ -23,6 +23,12 @@ li{
     list-style-type: none;
     border-radius: 5px;
     color: white;
+    
+    padding-top: 10px;
+    border: solid 1px;
+    border-color: white;
+    margin: 10px;
+    padding-inline: 10px;
 }
 input [text] {
 
