--- a/todo.css
+++ b/todo.css
@@ -20,11 +20,10 @@ ul{
       
 }
 li{
-    color:black
     background-color: white;
     list-style-type: none;
     border-radius: 5px;
-    color: white;
+    color: black;
     
     padding-top: 10px;
     border: solid 1px;
