--- a/todo.css
+++ b/todo.css
@@ -1,5 +1,14 @@
 body{
     background-color: #000099;
+    border: solid 1px;
+    border-color: #000099;
+   
+    
+    padding-top: 10px;
+   
+    margin: 10px;
+    padding-inline: 10px;
+
 
 }
 h1{
