--- a/pizzeria.css
+++ b/pizzeria.css
@@ -14,7 +14,8 @@ h2{
     text-align: left;
 }
 
-li:vertical-align:{
+li:vertical-align{
+    list-style-type:none;
     text-align: center;
     font-family: Arial, Helvetica white;
     background-color: #C03000;
